--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,23 @@ services:
       sh -c 'npm install && npm run serve'
     ports:
       - "8080:8080"
+    environment:
+      - NODE_ENV=development
+  cita-docs:
+    image: node:10-slim
+    container_name: cita-docs
+    user: "node"
+    working_dir: /home/node/app
+    volumes:
+      - .:/home/node/app
+      - /home/node/ruadois/node_modules
+    entrypoint:
+      - npm
+      - run
+      - docs:dev
+    ports:
+      - "8081:8080"
+    environment:
+      - NODE_ENV=development
+    depends_on:
+      - cita-dev
