--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  cita-dev:
+  it-dev:
     image: node:10-slim
-    container_name: cita-dev
+    container_name: it-dev
     user: "node"
     working_dir: /home/node/app
     volumes:
@@ -13,21 +13,27 @@ services:
       - "8080:8080"
     environment:
       - NODE_ENV=development
-  cita-docs:
-    image: node:10-slim
-    container_name: cita-docs
-    user: "node"
-    working_dir: /home/node/app
-    volumes:
-      - .:/home/node/app
-      - /home/node/ruadois/node_modules
-    entrypoint:
-      - npm
-      - run
-      - docs:dev
-    ports:
-      - "8081:8080"
-    environment:
-      - NODE_ENV=development
-    depends_on:
-      - cita-dev
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+  # it-docs:
+  #   image: node:10-slim
+  #   container_name: it-docs
+  #   user: "node"
+  #   working_dir: /home/node/app
+  #   volumes:
+  #     - .:/home/node/app
+  #   entrypoint:
+  #     - npm
+  #     - run
+  #     - docs:dev
+  #   # command:
+  #   #   sh -c 'npm run docs:dev'
+  #   ports:
+  #     - "8081:8080"
+  #   environment:
+  #     - NODE_ENV=development
+  #   depends_on:
+  #     - it-dev
